hphp/test/slow/inout/bad-generator.php.expectf

Fatal error: Parameters may not be marked inout on generators in %s/bad-generator.php on line 3
